# OOP

./: README.md
circular_buffer/: CMakeLists.txt  CircularBuffer.cpp  CircularBuffer.h  main  main.cpp  tests.cpp
csv_parser/include/: basic_parser.hpp  parser1.hpp
csv_parser/src/: Makefile  main  main1.cpp  main2.cpp  test.csv  wrong.csv
game_of_life/: CMakeLists.txt
game_of_life/include/: GameOfLife.h
game_of_life/presets/: bebra.txt  glider.txt  glider_gun.txt  gliders_crash.txt  longlife.txt  moved_glider.txt  output.txt  pulsar.txt
game_of_life/src/: GameOfLife.cpp  main.cpp
game_of_life/tests/: CMakeLists.txt  tests.cpp
sound_processor/: CMakeLists.txt
sound_processor/include/: circular_buffer.hpp  exceptions.hpp  fft.hpp  sound_processor.hpp
sound_processor/samples/: config.txt
sound_processor/src/: main  main.cpp  sound_processor.cpp
zero_b/: input.txt  zero_b.cpp
